# sae-dump-player

./: .dockerignore  .gitignore  Dockerfile  README.md  docker_build.sh  docker_push.sh  pyproject.toml
helm/sae-dump-player/: Chart.yaml  values.yaml
helm/sae-dump-player/templates/: _helpers.tpl  service.yaml  statefulset.yaml
helm/sae-dump-player/templates/hooks/: pre-delete-hook.yaml
sae_dump_player/: app.py  player.py
static/: index.html
